# notsudo

./: .gitignore  CONTRIBUTING.md  README.md  check_db.py  pyproject.toml  verify_game.py
.agent/: ARCHITECTURE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: add_dodo_customer_column.py  app.py  create_tables_safe.py  init_db.py  migrate_subs.py  requirements.txt  run_tests.sh  start.sh  tasks.py  test_redis_integration.py  worker.py
backend/__tests__/: test_ai_service_detailed.py  test_db_detailed.py  test_github_app.py  test_pr_service.py
backend/sandbox_dockerfiles/: README.md  nodejs.Dockerfile  python.Dockerfile
backend/services/: ai_service.py  code_execution.py  comby_service.py  db.py  docker_sandbox.py  formatter_detector.py  github_app.py  github_service.py  groq_service.py  models.py  pr_service.py  redis_service.py  screenshot_service.py  security_scanner.py  stack_detector.py  supabase_service.py
backend/tests/: test_ai_service.py  test_code_execution.py  test_comby_service.py  test_conflict_resolution.py  test_docker_detection.py  test_docker_sandbox.py  test_formatter_detector.py  test_github_service_structure.py  test_security_scanner.py  test_stack_detector.py  test_supabase_service.py
backend/utils/: logger.py
db/: .gitignore  drizzle.config.ts  package.json  pnpm-lock.yaml
db/src/: index.ts
frontend/: .env.example  drop-auth-tables.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: page.tsx  (+2 more)
(+46 files in other folders)
